RESOLVED FIXED322776
REGRESSION(319888@main): [AppKit Gestures] Cannot back/forward navigate with gesture-driven swipe
https://bugs.webkit.org/show_bug.cgi?id=322776
Summary REGRESSION(319888@main): [AppKit Gestures] Cannot back/forward navigate with ...
Abrar Rahman Protyasha
Reported 2026-08-27 17:48:33 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2026-08-27 18:19:19 PDT
EWS
Comment 2 2026-08-27 22:26:15 PDT
Committed 320017@main (2715812bcdba): <https://commits.webkit.org/320017@main> Reviewed commits have been landed. Closing PR #72668 and removing active labels.
EWS
Comment 3 2026-08-31 11:09:01 PDT
Committed 316606.569@safari-7625-branch (45b30d5b004c): <https://commits.webkit.org/316606.569@safari-7625-branch> Reviewed commits have been landed. Closing PR #6523 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.